# doc2beat

./: .gitignore  README.md  ad_glossary_song.csv  ad_glossary_song_v2.csv  ad_glossary_song_v3.csv  config.yaml  example_creds.yaml  example_input.csv  final_synapse_urls.csv  nf_synapse_docs_urls.csv  nf_synapse_songs.csv  nf_synapse_songs_inventive.csv  pyproject.toml  suno_v5_genres.csv  synapse_songs_diverse.csv  synapse_songs_improved.csv  synapse_songs_inventive.csv  test_basic.py  test_styles.py
src/doc2beat/: __init__.py  cli.py  core.py
